@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Gtk2-Sexy
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Gtk2-Sexy/Attic/ChangeLog,v 1.5 2009/03/13 12:39:23 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Gtk2-Sexy/Attic/ChangeLog,v 1.6 2009/11/23 21:27:40 tove Exp $
+
+  23 Nov 2009; Torsten Veller <tove@gentoo.org> Gtk2-Sexy-0.05.ebuild:
+  Add missing deps: ExtUtils::Depends, ExtUtils::PkgConfig (#294300)
 
   13 Mar 2009; Torsten Veller <tove@gentoo.org> -Gtk2-Sexy-0.02.ebuild,
   -Gtk2-Sexy-0.04.ebuild:
